--- a/style.css
+++ b/style.css
@@ -38,7 +38,8 @@ h1 {
 }
 
 h1,
-p, h2{
+p,
+h2 {
     font-family: 'Inter', sans-serif;
 }
 
@@ -97,6 +98,10 @@ h3 {
     width: 100%;
 }
 
+.mobile {
+    display: none;
+}
+
 img {
     border-radius: 0 0.625rem 0.625rem 0;
     height: 100%;
@@ -105,6 +110,7 @@ img {
 
 .attribution {
     font-size: 11px;
+    margin-top: 20px;
     text-align: center;
 }
 
